fixed box spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,33 +2,33 @@ body {
   text-align: center;
   background-color: #f7efe3;
 }
-h1 {
-  text-align: center;
-  padding-top: 20px;
+h1 {  
   padding-bottom: 20px
 }
 h2 {
-  text-align: center;
   padding-top: 20px;
   padding-bottom: 20px
 }
 p {
-  text-align: center;
   font-style: italic;
-} 
+}
+div {
+  margin: auto;
+}
 li, ul {
   text-align: left;
 }
 .main-block {
   background-color: #e7dfd3;
-  margin-top: 30px;
-  margin-bottom: 60px;
+  padding: 10px;
+  margin-top: 20px;
   border-radius: 10px;
+  
 }
 .intro-block {
   background-color: #e1d7c9;
-  margin-top: 20px;
-  padding-bottom: 10px;
+  padding: 10px;
+  margin: 20px;  
   border-radius: 10px;
 } 
 .epic-pic {
